--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
 <body>
-
-<h1>ASIAN 210 Project</h1>
-<p>Add Content</p>
-
+  Hello world
+  <script src="script.js"></script>
 </body>
+
 </html>
