--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Asian 210 Creative Project</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
+  <h1>ASIAN 210 Creative Project</h1>
+  <p>Add Content later</p>
   <script src="script.js"></script>
 </body>
 
