added nav bar and more styling

--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-  <h1>ASIAN 210 Creative Project</h1>
-  <p>Add Content later</p>
+<body>  
+
+  
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="content.html">Content</a>
+    <a href="sources.html">Sources</a>
+  </div>
+
+  <div style="padding-left:16px">
+    <h1>ASIAN 210 Creative Project</h1>
+    <p>Add Content later</p>
+  </div>
   <script src="script.js"></script>
 </body>
 
