push to work at school

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div style="padding-left:16px">
     <h1>ASIAN 210 Creative Project</h1>
-    <p>Add Content later</p>
+    <p>This is my Creative Project for ASIAN 210, where I will talk about the issues of Orientalism and the Far East. Orientalism has been a big issue with the West extering their power on the East. In the book "Orientalism" by Edward Said, he talks about the issues of Orientalism however, he focuses on the close East rather than the Far East.</p>
   </div>
   <script src="script.js"></script>
 </body>
