--- a/content.html
+++ b/content.html
@@ -10,7 +10,6 @@
 
 <body>  
 
-  
   <div class="topnav">
     <a href="index.html">Home</a>
     <a class="active" href="content.html">Content</a>
@@ -20,6 +19,11 @@
   <div style="padding-left:16px">
     <h1>ASIAN 210 Creative Project</h1>
     <p>Add Content later</p>
+  </div>
+
+  <div style="padding-left:16px">
+    <h1>Japonesme </h1>
+    <p>When Japan opened up trade during the Meiji Restoration</p>
   </div>
   <script src="script.js"></script>
 </body>
