--- a/content.html
+++ b/content.html
@@ -17,13 +17,13 @@
   </div>
 
   <div style="padding-left:16px">
-    <h1>ASIAN 210 Creative Project</h1>
-    <p>Add Content later</p>
+    <h1>Appropriation of Japanese Commodities</h1>
+    <p>When Japan opened up trade during the Meiji Restoration</p>
   </div>
 
   <div style="padding-left:16px">
-    <h1>Japonesme </h1>
-    <p>When Japan opened up trade during the Meiji Restoration</p>
+    <h1>Sexualization of Japanese Women</h1>
+    <p>In Madama Butterfly</p>
   </div>
   <script src="script.js"></script>
 </body>
