added some content

--- a/content.html
+++ b/content.html
@@ -18,12 +18,13 @@
 
   <div style="padding-left:16px">
     <h1>Appropriation of Japanese Commodities</h1>
-    <p>When Japan opened up trade during the Meiji Restoration</p>
+    <p style = "font-size: 24px">In the 1900's, there was a big craze for Japanese commodities, especially Japanese Art. This was because in 1868, Japan opened their borders for trade to the rest of the world.
+    This created a craze for Japanese Art, more specifically <dfn title="Ukiyo-e means 'pictures of the floating world'. It oftened depicted Japanese cities during the Edo period.">Ukiyo-e</dfn>. Ukiyo-e is a type of art that was really prevelant during the 17th-19th centuries in Japan. </p>
   </div>
 
   <div style="padding-left:16px">
-    <h1>Sexualization of Japanese Women</h1>
-    <p>In Madama Butterfly</p>
+    <h1>Sexualization of East Asian Women</h1>
+    <p style = "font-size: 24px">In Madama Butterfly</p>
   </div>
   <script src="script.js"></script>
 </body>
