fixed some styling and added info

--- a/content.html
+++ b/content.html
@@ -15,15 +15,22 @@
     <a class="active" href="content.html">Content</a>
   </div>
 
-  <div style="padding-left:16px">
+  <div style="padding-left:16px;padding-right: 30px">
     <h1>Appropriation of Japanese Commodities</h1>
     <p style = "font-size: 24px">In the 1900's, there was a big craze for Japanese commodities, especially Japanese Art. This was because in 1868, Japan opened their borders for trade to the rest of the world.
-    This created a craze for Japanese Art, more specifically <dfn title="Ukiyo-e means 'pictures of the floating world'. It oftened depicted Japanese cities during the Edo period.">Ukiyo-e</dfn>. Ukiyo-e is a type of art that was really prevelant during the 17th-19th centuries in Japan. </p>
+    This created a craze for Japanese Art, more specifically <dfn title="Ukiyo-e means 'pictures of the floating world'. It oftened depicted Japanese cities during the Edo period.">Ukiyo-e</dfn>. Ukiyo-e is a type of art that was really prevelant during the 17th-19th centuries in Japan. One famous example of Ukiyo-e is the The Great Wave off Kanagawa by Hokusai which is shown below.</p>
   </div>
+  <button class="accordion">Examples of Ukiyo-e</button>
+  <div class="panel">
+  <img src="hokusai_great_wave.jpg" class="small-img">
+  <p style="color: black">Great Wave off Kanagawa by Hokusai</p>
+  </div>
+  <br>
 
-  <div style="padding-left:16px">
+  <div style="padding-left:16px;padding-right: 30px">
     <h1>Sexualization of East Asian Women</h1>
-    <p style = "font-size: 24px">In Madama Butterfly</p>
+    <p style = "font-size: 24px">In Madama Butterfly, we see a example of the hypersexualization of the Asian women. Cio-Cio-san, one of the characters in Madama Butterfly was willing to wait for her white husband even after he left her for years. When he came back with a new wife she was willing to commit 
+    <dfn title = "Honorable way for the Japanese to commit suicide">seppuku</dfn> for him. This gives off the image of the submissive Asian woman.</p>
   </div>
   <script src="script.js"></script>
 </body>
