added some more info

--- a/content.html
+++ b/content.html
@@ -26,6 +26,16 @@
   <p style="color: black">Great Wave off Kanagawa by Hokusai</p>
   </div>
   <br>
+  
+  <button class="accordion">Examples of Ukiyo-e Appropriation</button>
+  <div class="panel">
+  <img src="Van_Gogh_-_Portrait_of_Pere_Tanguy_1887-8.jpeg" class="small-img">
+  <p style="color: black">Portrait of Pere Tanguy by Van Gogh</p>
+  </div>
+
+  <div style="padding-left:16px;padding-right: 30px">
+  <p style = "font-size: 24px">With increasingly growing intrerest in Japanese goods, another object that was seen as exotic to the West in the 1900s is the kimonos. Especially with Geishas wearing kimonos and their image in the West being the exotic Asian woman.</p>
+  </div>
 
   <div style="padding-left:16px;padding-right: 30px">
     <h1>Sexualization of East Asian Women</h1>
