--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h1>ASIAN 210 Creative Project</h1>
     <p style = "font-size: 30px">This is my Creative Project for ASIAN 210, where I will talk about the issues of Orientalism and the Far East. Orientalism has been a big issue with the West extering their power on the East. In the book "Orientalism" by Edward Said, he talks about the issues of Orientalism however, he focuses on the Near East rather than the East Asia.</p>
     <p style = "font-size: 30px">In this web-blog, I will talk more specifically about Japan and how the West has appropriated Japanese commodities and how Orientalism has affected them negatively.</p>
+    <p style = "font-size: 30px">The contents of the web-blog is available on the "Content" tab on the top of the webpage.</p>
   </div>
   <script src="script.js"></script>
 </body>
